--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:8081/"
+  "proxy":"http://flightservices.eba-isfdxxhm.us-east-2.elasticbeanstalk.com"
 }
